@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020230609"
-#define public MagickPackageReleaseDate "snapshot-20230609"
+#define public MagickPackageVersionAddendum ".020230611"
+#define public MagickPackageReleaseDate "snapshot-20230611"
